# ministack

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  new_service.yml
.github/workflows/: ci.yml  docker-publish.yml
core/: responses.py  router.py
ministack/: app.py
ministack/core/: router.py
ministack/services/: apigateway.py  apigateway_v1.py  cognito.py  ec2.py  ecs.py  efs.py  rds.py  s3.py  sns.py  sqs.py  stepfunctions.py
ministack/services/cloudformation/: provisioners.py
services/: athena.py  cloudwatch.py  cloudwatch_logs.py  dynamodb.py  ecs.py  elasticache.py  eventbridge.py  glue.py  iam_sts.py  kinesis.py  lambda_svc.py  rds.py  s3.py  secretsmanager.py  ses.py  sns.py  sqs.py  ssm.py  stepfunctions.py
tests/: conftest.py  test_cfn.py  test_cognito.py  test_ec2.py  test_rds.py  test_s3.py  test_services.py  test_sfn.py  test_sns.py
