[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ministack"
version = "0.1.0"
description = "Free, open-source local AWS emulator — drop-in LocalStack replacement"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["aws", "localstack", "testing", "s3", "sqs", "dynamodb", "local-dev"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet",
]
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "httptools>=0.6.1",
]

[project.optional-dependencies]
full = [
    "duckdb>=0.10.0",
    "docker>=7.0.0",
]
dev = [
    "boto3>=1.34",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "duckdb>=0.10.0",
    "docker>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/Nahuel990/ministack"
Repository = "https://github.com/Nahuel990/ministack"
Issues = "https://github.com/Nahuel990/ministack/issues"

[project.scripts]
ministack = "app:main"

[tool.setuptools.packages.find]
include = ["core*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["core", "services"]
omit = ["tests/*"]
